kubernetes/apps/security/authentik/app/ingress-outpost-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: authentik-outpost-external
    annotations:
      external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
      hajimari.io/enable: "false"
spec:
  ingressClassName: external
  rules:
    - host: chat.${SECRET_DOMAIN}
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: ak-outpost-authentik-embedded-outpost
                port:
                  number: 9000
